added css to the entire project

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/style.css">
     <title>
         Basic Recipes
     </title>
 </head>
 
 <body>
-    <hi>Odins Recipes</hi>
+    <h1 class="header">Odins Recipes</h1>
 
-    <p>
+    <p class="recipe-links">
     <a href="/recipes/pastaBolognese.html">Pasta Bolognese Recipe</a>
     <a href="/recipes/pbjSandwich.html">Typical Peanut Butter & Jelly Sandwich</a>
     <a href="/recipes/yogurt.html">My Morning Yogurt</a>
