--- a/recipes/pastaBolognese.html
+++ b/recipes/pastaBolognese.html
@@ -3,28 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Basic Recipes</title>
 </head>
 <body>
-    <h1>
+    <h1 class="header">
         Pasta Bolognese
     </h1>
 
-    <img src="/Photos/Bolognese.jpg" alt="pasta bolognese"/>
+    <img class="image-header" src="/Photos/Bolognese.jpg" alt="pasta bolognese"/>
 
-    <h3>Descriptions</h3>
+    <h3 class="subheader">Descriptions</h3>
 
-    <p>
+    <p class="recipe-description">
            Let me guess, you're at work and have no idea what to make for dinner for 100th day in a row. Well,
            look for further! Pasta Bolognese, a classic dish that is a simple as it delicious. 
     </p>
 
-    <p>
+    <p class="recipe-description">
         It only takes a few ingredients and basic cooking skills to make. without further ado, let's cook!
     </p>
 
-    <h3>Ingredients</h3>
-    <ul>
+    <h3 class="subheader">Ingredients</h3>
+    <div class="container">
+    <ul class="ingredient-list">
         <li>1 Package Dry Pasta (any kind)</li>
         <li>1 Jar Tomato Sauce</li>
         <li>1/2 LB Ground Beef</li>
@@ -32,16 +34,19 @@
         <li>Parmesean Cheese</li>
         <li>Seasoning</li>
     </ul>
+    </div>
 
-    <h3>Cooking Steps</h3>
-    <ol>
-        <li>cook the pasta</li>
-        <li>cook ground beef in sauce pan</li>
-        <li>once ground beef is cook, add tomato sauce</li>
-        <li>drain pasta once el dente</li>
-        <li>put sauce on low heat, turn off pasta</li>
-        <li>add the amount of pasta needed to beef/sauce mixture</li>
-    </ol>
+    <h3 class="subheader">Cooking Steps</h3>
+    <div class="container">
+        <ol class="cooking-list">
+            <li>cook the pasta</li>
+            <li>cook ground beef in sauce pan</li>
+            <li>once ground beef is cook, add tomato sauce</li>
+            <li>drain pasta once el dente</li>
+            <li>put sauce on low heat, turn off pasta</li>
+            <li>add the amount of pasta needed to beef/sauce mixture</li>
+        </ol>
+    </div>
 
 
 </body>
