--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -3,34 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Basic Recipes</title>
 </head>
 <body>
-    <h1>My Morning Yogurt</h1>
+    <h1 class="header">My Morning Yogurt</h1>
 
-    <img src="/Photos/my-yogurt.jpg" alt="My breakfast yogurt dish">
+    <img class="image-header" src="/Photos/my-yogurt.jpg" alt="My breakfast yogurt dish">
 
-    <h3>Decription</h3>
-    <p>Healthy, Delicious, and Nutrious</p>
-    <p>If you're like me, I like my sleep. I don't wake up extra early to make a big breakfast. This is my morning breakfast routine 
+    <h3 class="subheader">Dsecription</h3>
+    <p class="recipe-description">Healthy, Delicious, and Nutrious</p>
+    
+    <p class="recipe-description">If you're like me, I like my sleep. I don't wake up extra early to make a big breakfast. This is my morning breakfast routine 
         that will please almost everyone.
     </p>
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Whole Milk Yogurt</li>
-        <li>Granola</li>
-        <li>Chopped Walnuts</li>
-        <li>Fresh Fruit (ie blackberries, blueberries, and raspberries)</li>
-        <li>Honey</li>
-        <li>Pumpkin Seeds</li>
-    </ul>
+    <h3 class="subheader">Ingredients</h3>
+    <div class="container">
+        <ul class="ingredient-list">
+            <li>Whole Milk Yogurt</li>
+            <li>Granola</li>
+            <li>Chopped Walnuts</li>
+            <li>Fresh Fruit (ie blackberries, blueberries, and raspberries)</li>
+            <li>Honey</li>
+            <li>Pumpkin Seeds</li>
+        </ul>
+    </div>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>Put desired amount of yogurt in bowl</li>
-        <li>Put the rest of tyhe ingredients in and stir</li>
-        <li>Enjoy!</li>
-    </ol>
+    <h3 class="subheader">Steps</h3>
+    <div class="container">
+        <ol class="cooking-list">
+            <li>Put desired amount of yogurt in bowl</li>
+            <li>Put the rest of tyhe ingredients in and stir</li>
+            <li>Enjoy!</li>
+        </ol>
+    </div>
 </body>
 </html>
