--- a/recipes/pbjSandwich.html
+++ b/recipes/pbjSandwich.html
@@ -3,31 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Basic Recipes</title>
 </head>
 <body>
-    <h1>Peanut Butter & Jelly Sandwich</h1>
+    <h1 class="header">Peanut Butter & Jelly Sandwich</h1>
 
-    <img src="/Photos/pbjsammy.jpg" alt="Peanut butter and jelly sandwich">
+    <img class="image-header" src="/Photos/pbjsammy.jpg" alt="Peanut butter and jelly sandwich">
 
-    <h3>Decription</h3>
-    <P>How could you go wrong? 3 great things combined into one sandwich. Doesnt matter if you're a kid
+    <h3 class="subheader">Description</h3>
+    
+    <P class="recipe-description">How could you go wrong? 3 great things combined into one sandwich. Doesnt matter if you're a kid
         or grown adult. Let's dive into this.
     </P>
 
-    <h3>Ingredients</h3>
-    <ul>
-        <Li>White Bread</Li>
-        <li>Peanut Butter</li>
-        <li>Grape Jelly</li>
-    </ul>
+    <h3 class="subheader">Ingredients</h3>
+    <div class="container">
+        <ul class="ingredient-list">
+            <Li>White Bread</Li>
+            <li>Peanut Butter</li>
+            <li>Grape Jelly</li>
+        </ul>
+    </div>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>Lather one piece of bread with grape jelly</li>
-        <li>Rinse the butter knife off, we don't need to do extra dishes here</li>
-        <li>Smear the other piece of bread with peanut butter</li>
-        <li>cut the crust off and cut diagonally</li>
-    </ol>
+    <h3 class="subheader">Steps</h3>
+    <div class="container">
+        <ol class="cooking-list">
+            <li>Lather one piece of bread with grape jelly</li>
+            <li>Rinse the butter knife off, we don't need to do extra dishes here</li>
+            <li>Smear the other piece of bread with peanut butter</li>
+            <li>cut the crust off and cut diagonally</li>
+        </ol>
+    </div>
 </body>
 </html>
