more css, placed recipe on a card, added background

--- a/recipes/pbjSandwich.html
+++ b/recipes/pbjSandwich.html
@@ -7,6 +7,8 @@
     <title>Basic Recipes</title>
 </head>
 <body>
+
+    <div class="recipe-card">
     <h1 class="header">Peanut Butter & Jelly Sandwich</h1>
 
     <img class="image-header" src="/Photos/pbjsammy.jpg" alt="Peanut butter and jelly sandwich">
@@ -34,6 +36,7 @@
             <li>Smear the other piece of bread with peanut butter</li>
             <li>cut the crust off and cut diagonally</li>
         </ol>
+    </div>
     </div>
 </body>
 </html>
