--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -7,6 +7,7 @@
     <title>Basic Recipes</title>
 </head>
 <body>
+    <div class="recipe-card">
     <h1 class="header">My Morning Yogurt</h1>
 
     <img class="image-header" src="/Photos/my-yogurt.jpg" alt="My breakfast yogurt dish">
@@ -37,6 +38,7 @@
             <li>Put the rest of tyhe ingredients in and stir</li>
             <li>Enjoy!</li>
         </ol>
+    </div>
     </div>
 </body>
 </html>
