--- a/recipes/pastaBolognese.html
+++ b/recipes/pastaBolognese.html
@@ -7,6 +7,7 @@
     <title>Basic Recipes</title>
 </head>
 <body>
+    <div class="recipe-card">
     <h1 class="header">
         Pasta Bolognese
     </h1>
@@ -48,6 +49,6 @@
         </ol>
     </div>
 
-
+    </div>
 </body>
 </html>
