added more css, including in-line block

--- a/recipes/pastaBolognese.html
+++ b/recipes/pastaBolognese.html
@@ -8,47 +8,48 @@
 </head>
 <body>
     <div class="recipe-card">
-    <h1 class="header">
-        Pasta Bolognese
-    </h1>
 
     <img class="image-header" src="/Photos/Bolognese.jpg" alt="pasta bolognese"/>
 
-    <h3 class="subheader">Descriptions</h3>
+    <div class="recipe-content">
+        <h1 class="header">Pasta Bolognese</h1>
 
-    <p class="recipe-description">
-           Let me guess, you're at work and have no idea what to make for dinner for 100th day in a row. Well,
-           look for further! Pasta Bolognese, a classic dish that is a simple as it delicious. 
-    </p>
+        <h3 class="subheader">Description</h3>
 
-    <p class="recipe-description">
-        It only takes a few ingredients and basic cooking skills to make. without further ado, let's cook!
-    </p>
+                <p class="recipe-description">
+                    Let me guess, you're at work and have no idea what to make for dinner for 100th day in a row. Well,
+                    look for further! Pasta Bolognese, a classic dish that is a simple as it delicious. 
+                </p>
 
-    <h3 class="subheader">Ingredients</h3>
-    <div class="container">
-    <ul class="ingredient-list">
-        <li>1 Package Dry Pasta (any kind)</li>
-        <li>1 Jar Tomato Sauce</li>
-        <li>1/2 LB Ground Beef</li>
-        <li>Basil</li>
-        <li>Parmesean Cheese</li>
-        <li>Seasoning</li>
-    </ul>
+                <p class="recipe-description">
+                    It only takes a few ingredients and basic cooking skills to make. without further ado, let's cook!
+                </p>
+
+        <h3 class="subheader">Ingredients</h3>
+        
+            <div class="container">
+                <ul class="ingredient-list">
+                    <li>1 Package Dry Pasta (any kind)</li>
+                    <li>1 Jar Tomato Sauce</li>
+                    <li>1/2 LB Ground Beef</li>
+                    <li>Basil</li>
+                    <li>Parmesean Cheese</li>
+                    <li>Seasoning</li>
+                </ul>
+            </div>
+
+        <h3 class="subheader">Cooking Steps</h3>
+            <div class="container">
+                <ol class="cooking-list">
+                    <li>cook the pasta</li>
+                    <li>cook ground beef in sauce pan</li>
+                    <li>once ground beef is cook, add tomato sauce</li>
+                    <li>drain pasta once el dente</li>
+                    <li>put sauce on low heat, turn off pasta</li>
+                    <li>add the amount of pasta needed to beef/sauce mixture</li>
+                </ol>
+            </div>
     </div>
-
-    <h3 class="subheader">Cooking Steps</h3>
-    <div class="container">
-        <ol class="cooking-list">
-            <li>cook the pasta</li>
-            <li>cook ground beef in sauce pan</li>
-            <li>once ground beef is cook, add tomato sauce</li>
-            <li>drain pasta once el dente</li>
-            <li>put sauce on low heat, turn off pasta</li>
-            <li>add the amount of pasta needed to beef/sauce mixture</li>
-        </ol>
-    </div>
-
     </div>
 </body>
 </html>
