--- a/recipes/pbjSandwich.html
+++ b/recipes/pbjSandwich.html
@@ -9,34 +9,38 @@
 <body>
 
     <div class="recipe-card">
-    <h1 class="header">Peanut Butter & Jelly Sandwich</h1>
+
 
     <img class="image-header" src="/Photos/pbjsammy.jpg" alt="Peanut butter and jelly sandwich">
-
-    <h3 class="subheader">Description</h3>
     
-    <P class="recipe-description">How could you go wrong? 3 great things combined into one sandwich. Doesnt matter if you're a kid
-        or grown adult. Let's dive into this.
-    </P>
+        <div class="recipe-content">
+            <h1 class="header">Peanut Butter & Jelly Sandwich</h1>
 
-    <h3 class="subheader">Ingredients</h3>
-    <div class="container">
-        <ul class="ingredient-list">
-            <Li>White Bread</Li>
-            <li>Peanut Butter</li>
-            <li>Grape Jelly</li>
-        </ul>
-    </div>
+                <h3 class="subheader">Description</h3>
+    
+                    <P class="recipe-description">How could you go wrong? 3 great things combined into one sandwich. Doesnt matter if you're a kid
+                     or grown adult. Let's dive into this.
+                    </P>
 
-    <h3 class="subheader">Steps</h3>
-    <div class="container">
-        <ol class="cooking-list">
-            <li>Lather one piece of bread with grape jelly</li>
-            <li>Rinse the butter knife off, we don't need to do extra dishes here</li>
-            <li>Smear the other piece of bread with peanut butter</li>
-            <li>cut the crust off and cut diagonally</li>
-        </ol>
-    </div>
+                <h3 class="subheader">Ingredients</h3>
+                    <div class="container">
+                        <ul class="ingredient-list">
+                            <Li>White Bread</Li>
+                            <li>Peanut Butter</li>
+                            <li>Grape Jelly</li>
+                        </ul>
+                    </div>
+
+                <h3 class="subheader">Steps</h3>
+                    <div class="container">
+                        <ol class="cooking-list">
+                            <li>Lather one piece of bread with grape jelly</li>
+                            <li>Rinse the butter knife off, we don't need to do extra dishes here</li>
+                            <li>Smear the other piece of bread with peanut butter</li>
+                            <li>cut the crust off and cut diagonally</li>
+                        </ol>
+                    </div>
+        </div>
     </div>
 </body>
 </html>
